Heroku DNS change test

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <a href="#">Home <i class="fa fa-chevron-down"></i></a>
 
         <ul class="sub-menu">
-            <li><a href="index-video.html">Video v1</a></li>
+            <li><a href="index-video.html">News</a></li>
             <li><a href="index-video-transparent-header.html">Video v2</a></li>
             <li><a href="index-google-map.html">Google Map V1</a></li>
             <li><a href="index-google-map-transparent-header.html">Google Map v2</a></li>
